Tweaking text to better fit screens

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,12 @@
         </div>
 
         <div id="weather" class="hidden">
-          <h2 class="text-5xl">
-            It's <span id="currentTemp"></span> in <span id="location"></span>
+          <h2 class="text-4xl">
+            <span id="currentTemp"></span> in <span id="location"></span>
           </h2>
-          <p class="text-gray-600">Feels like <span id="feelTemp"></span></p>
+          <p class="text-gray-600 text-right">
+            Feels like <span id="feelTemp"></span>
+          </p>
           <p class="flex justify-center">
             <i id="weatherIcon" class="wu wu-black wu-256"></i>
           </p>
