Add refresh button

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,14 @@
           <p class="flex justify-center">
             <i id="weatherIcon" class="wu wu-black wu-256"></i>
           </p>
+          <div class="text-right">
+            <button
+              id="refreshWeather"
+              class="bg-white hover:bg-gray-200 active:bg-gray-400 text-gray-800 font-semibold py-1 px-2 border border-gray-400 rounded shadow text-sm"
+            >
+              Refresh
+            </button>
+          </div>
         </div>
 
         <div id="error" class="hidden"></div>
