--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,13 @@
   <body>
     <div class="bg-gray-500 h-screen w-screen flex justify-center">
       <div class="flex p-6 bg-white rounded-lg shadow-xl self-center">
-        <div id="loader">
-          Getting current weather...
+        <div id="loader" class="flex flex-col justify-center text-gray-800">
+          Getting current weather
+          <img class="mt-4" src="./svg-loaders/puff.svg" />
         </div>
 
         <div id="weather" class="hidden">
-          <h2 class="text-4xl">
+          <h2 class="text-4xl text-center">
             <span id="currentTemp"></span> in <span id="location"></span>
           </h2>
           <p class="text-gray-600 text-right">
