--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,15 @@
 
         <div id="error" class="hidden"></div>
       </div>
+
+      <a
+        href="https://github.com/brycehipp/weather.brycehipp.tech"
+        target="_blank"
+        rel="noopener"
+        class="absolute bottom-0 right-0 px-2 py-2 text-gray-700 text-xs sm:text-sm"
+      >
+        View on GitHub
+      </a>
     </div>
 
     <script src="./index.js" charset="utf-8"></script>
