Add padding to root div

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="bg-gray-500 h-screen w-screen flex justify-center">
+    <div class="bg-gray-500 h-screen w-screen flex justify-center px-5">
       <div class="flex p-6 bg-white rounded-lg shadow-xl self-center">
         <div id="loader" class="flex flex-col justify-center text-gray-800">
           Getting current weather
