Add some meta tags for SEO and Twitter

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Weather</title>
+    <title>What's the Weather</title>
+    <meta
+      name="description"
+      content="Get the weather at your current location."
+    />
+    <meta name="twitter:title" content="What's the Weather" />
+    <meta
+      name="twitter:description"
+      content="Get the weather at your current location"
+    />
+    <meta name="twitter:site" content="@brycehipp" />
+    <meta name="twitter:creator" content="@brycehipp" />
 
     <link rel="stylesheet" href="./styles.css" />
   </head>
