Update meta tag to include twitter:card

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
       name="description"
       content="Get the weather at your current location."
     />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@brycehipp" />
     <meta name="twitter:title" content="What's the Weather" />
     <meta
       name="twitter:description"
       content="Get the weather at your current location"
     />
-    <meta name="twitter:site" content="@brycehipp" />
-    <meta name="twitter:creator" content="@brycehipp" />
 
     <link rel="stylesheet" href="./styles.css" />
   </head>
